--- a/addon/templates/components/theater-stage-character.hbs
+++ b/addon/templates/components/theater-stage-character.hbs
@@ -1,3 +1,3 @@
 {{#each portraits as |portrait|}}
-  <img class='theater-stage__portrait' src={{portrait}}>
+  <img class='ember-theater-stage__portrait' src={{portrait}}>
 {{/each}}
