allow multiple backdrops

--- a/addon/templates/components/ember-theater.hbs
+++ b/addon/templates/components/ember-theater.hbs
@@ -1,5 +1,5 @@
-{{#if mediaLoaded}}
+{{#if scene}}
   {{ember-theater-director scene=scene}}
 {{else}}
-  {{ember-theater-curtain mediaLoaded=mediaLoaded}}
+  {{ember-theater-curtain complete='transitionToInitialScene'}}
 {{/if}}
