--- a/addon/styles/theater/addon.css
+++ b/addon/styles/theater/addon.css
@@ -1,5 +1,6 @@
 .ember-theater-stage {
   overflow: hidden;
+  background-color: #333;
 }
 
 .ember-theater,
@@ -19,10 +20,15 @@
   left: 0;
 }
 
+.ember-theater-stage__portrait, .ember-theater-stage__backdrop {
+  opacity: 0;
+}
+
 .ember-theater-stage__backdrop {
   background-size: cover;
   background-position: center;
 }
+
 .ember-theater-stage__character {
   bottom: 0;
   left: 0;
@@ -30,5 +36,4 @@
 
 .ember-theater-stage__portrait {
   height: 100%;
-  opacity: 0;
 }
