--- a/addon/templates/components/ember-theater-stage.hbs
+++ b/addon/templates/components/ember-theater-stage.hbs
@@ -1,4 +1,6 @@
-{{ember-theater-stage-backdrop backdrop=backdrop}}
-{{#each characters as |character index|}}
+{{#each backdrops key='id' as |backdrop|}}
+  {{ember-theater-stage-backdrop backdrop=backdrop}}
+{{/each}}
+{{#each characters key='id' as |character index|}}
   {{ember-theater-stage-actor character=character index=index charactersLength=characters.length}}
 {{/each}}
