--- a/addon/styles/theater/addon.css
+++ b/addon/styles/theater/addon.css
@@ -27,6 +27,9 @@
 .ember-theater-stage__backdrop {
   background-size: cover;
   background-position: center;
+  width: 100%;
+  height: 100%;
+  color: transparent;
 }
 
 .ember-theater-stage__character {
