--- a/addon/templates/components/ember-theater-stage-actor.hbs
+++ b/addon/templates/components/ember-theater-stage-actor.hbs
@@ -1,3 +1,3 @@
 {{#each portraits as |portrait|}}
-  <img class='ember-theater-stage__portrait' src={{portrait}}>
+  {{ember-theater-stage-character-portrait src=portrait character=this}}
 {{/each}}
