--- a/addon/components/ember-theater-stage-character/template.hbs
+++ b/addon/components/ember-theater-stage-character/template.hbs
@@ -1,3 +1,5 @@
-{{#each portraits as |portrait|}}
-  {{ember-theater-stage-character-portrait src=portrait character=this}}
+{{#each expressionContainers as |expressionContainer|}}
+  {{ember-theater-stage-character-expression
+    expression=expressionContainer.expression
+    line=expressionContainer.line}}
 {{/each}}
