load models within related component

--- a/addon/components/ember-theater-stage/template.hbs
+++ b/addon/components/ember-theater-stage/template.hbs
@@ -1,5 +1,3 @@
 {{#each sceneObjectContainers as |sceneObjectContainer|}}
-  {{component sceneObjectContainer.sceneObject.componentType
-    line=sceneObjectContainer.line
-    sceneObject=sceneObjectContainer.sceneObject}}
+  {{component sceneObjectContainer.componentType line=sceneObjectContainer.line}}
 {{/each}}
