--- a/addon/styles/theater/addon.css
+++ b/addon/styles/theater/addon.css
@@ -44,3 +44,41 @@
 .ember-theater-stage__expression {
   height: 100%;
 }
+
+.ember-theater-stage__speech {
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 30vh;
+  font-size: 9vh;
+  padding: 4vh;
+  margin: 0;
+  opacity: .9;
+}
+
+.ember-theater-stage__speech, .ember-theater-stage-speech__caption {
+  border: 3px solid #00585F;
+  background: #009393;
+  color: #FFFCC4;
+}
+
+.ember-theater-stage-speech__caption {
+  position: absolute;
+  top: -6vh;
+  left: 2vh;
+  padding: 1vh 2vh;
+  font-size: 6vh;
+}
+
+.ember-theater-stage-speech__body-container {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  line-height: 10vh;
+}
+
+.ember-theater-stage-speech__body {
+  position: relative;
+}
