--- a/addon/components/ember-theater-stage/template.hbs
+++ b/addon/components/ember-theater-stage/template.hbs
@@ -1,3 +1,3 @@
-{{#each sceneObjectContainers as |sceneObjectContainer|}}
-  {{component sceneObjectContainer.componentType line=sceneObjectContainer.line}}
+{{#each directables as |directable|}}
+  {{component directable.componentType line=directable.line}}
 {{/each}}
