--- a/addon/components/ember-theater-stage-choice/template.hbs
+++ b/addon/components/ember-theater-stage-choice/template.hbs
@@ -1,3 +1,3 @@
 {{#each choices as |choice|}}
-  <li {{action 'choose' choice.path}} class='ember-theater-stage-choice__option'>{{choice.text}}</li>
+  <a {{action 'choose' choice.path}} class='ember-theater-stage-choice__option'>{{choice.text}}</a>
 {{/each}}
