clean up directions

--- a/addon/components/ember-theater-director/template.hbs
+++ b/addon/components/ember-theater-director/template.hbs
@@ -1,1 +1,3 @@
-{{ember-theater-stage directables=directables}}
+{{#each scene.directables as |directable|}}
+  {{component directable.componentType line=directable.line}}
+{{/each}}
