destroy unused objects

--- a/addon/components/ember-theater-director/template.hbs
+++ b/addon/components/ember-theater-director/template.hbs
@@ -1,3 +1,5 @@
 {{#each scene.directables as |directable|}}
-  {{component directable.componentType line=directable.line}}
+  {{component directable.componentType
+    line=directable.line
+    destroyDirectable=(action 'destroyDirectable' directable)}}
 {{/each}}
