add dialogue translations

--- a/addon/components/ember-theater-directable-dialogue/template.hbs
+++ b/addon/components/ember-theater-directable-dialogue/template.hbs
@@ -3,6 +3,6 @@
 {{/if}}
 <div class='ember-theater-stage-dialogue__body-container'>
   <div class='ember-theater-stage-dialogue__body'>
-    {{line.text}}
+    {{displayText}}
   </div>
 </div>
