--- a/addon/components/ember-theater-directable-choice/template.hbs
+++ b/addon/components/ember-theater-directable-choice/template.hbs
@@ -1,3 +1,6 @@
+{{#if line.header}}
+  <div class='ember-theater-stage-choice__header'>{{line.header}}</div>
+{{/if}}
 {{#each choices as |choice|}}
-  <a {{action 'choose' choice.path}} class='ember-theater-stage-choice__option'>{{choice.text}}</a>
+  <button {{action 'choose' choice.path}} class='ember-theater-stage-choice__option'>{{choice.text}}</button>
 {{/each}}
