allow simple intl syntax for dialogue

--- a/addon/components/ember-theater-directable-dialogue/template.hbs
+++ b/addon/components/ember-theater-directable-dialogue/template.hbs
@@ -1,8 +1,8 @@
-{{#if displayName}}
-  <div class='ember-theater-stage-dialogue__caption'>{{displayName}}</div>
+{{#if name}}
+  <div class='ember-theater-stage-dialogue__caption'>{{name}}</div>
 {{/if}}
 <div class='ember-theater-stage-dialogue__body-container'>
   <div class='ember-theater-stage-dialogue__body'>
-    {{displayText}}
+    {{text}}
   </div>
 </div>
