make layers nestable

--- a/addon/components/ember-theater-director/template.hbs
+++ b/addon/components/ember-theater-director/template.hbs
@@ -1,5 +1,4 @@
-{{#each scene.layers as |layer|}}
-  {{ember-theater-layer
-  directables=layer.directables
-  name=layer.name}}
-{{/each}}
+{{ember-theater-layer
+directables=scene.theaterLayer.directables
+layers=scene.theaterLayer.layers
+name=scene.theaterLayer.name}}
