--- a/addon/components/ember-theater-layer/template.hbs
+++ b/addon/components/ember-theater-layer/template.hbs
@@ -3,3 +3,10 @@
     line=directable.line
     destroyDirectable=(action 'destroyDirectable' directable)}}
 {{/each}}
+
+{{#each layers as |layer|}}
+  {{ember-theater-layer
+    directables=layer.directables
+    layers=layer.layers
+    name=layer.name}}
+{{/each}}
