--- a/addon/styles/theater/addon.css
+++ b/addon/styles/theater/addon.css
@@ -73,16 +73,27 @@
   font-size: 6vh;
 }
 
-.ember-theater-stage-dialogue__body-container {
+.letter-by-letter-container {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  line-height: 10vh;
+  line-height: 8vh;
 }
 
-.ember-theater-stage-dialogue__body {
+.letter-by-letter {
   position: relative;
+  font-size: 0;
+}
+
+.letter-by-letter__word {
+  white-space: nowrap;
+}
+
+.letter-by-letter__character {
+  display: inline-block;
+  padding: 0;
   font-size: 6vh;
+  opacity: 0;
 }
 
 .ember-theater-stage__choice {
