--- a/addon/components/letter-by-letter/template.hbs
+++ b/addon/components/letter-by-letter/template.hbs
@@ -1,6 +1,6 @@
 <div class='letter-by-letter'>
   {{#each visibleWords key='@index' as |word index|}}
-    {{letter-by-letter-word 
+    {{letter-by-letter/word 
       currentWord=currentWord
       incrementCurrentWord=(action 'incrementCurrentWord')
       index=index
