--- a/addon/components/ember-theater/directable/dialogue/template.hbs
+++ b/addon/components/ember-theater/directable/dialogue/template.hbs
@@ -1,5 +1,5 @@
 {{#if name}}
-  <div class='ember-theater-stage-dialogue__caption'>{{name}}</div>
+  <div class='et-dialogue-caption'>{{name}}</div>
 {{/if}}
 {{letter-by-letter
   completePage=(action 'completePage')
