--- a/addon/components/ember-theater/director/template.hbs
+++ b/addon/components/ember-theater/director/template.hbs
@@ -1,4 +1,4 @@
 {{ember-theater/layer
-directables=scene.theaterLayer.directables
-layers=scene.theaterLayer.layers
-name=scene.theaterLayer.name}}
+directables=theaterLayer.directables
+layers=theaterLayer.layers
+name=theaterLayer.name}}
