--- a/addon/styles/components/_ember-theater.scss
+++ b/addon/styles/components/_ember-theater.scss
@@ -2,6 +2,7 @@
 @import "ember-theater/directables";
 @import "ember-theater/director";
 @import "ember-theater/layer";
+@import "ember-theater/menu-bar";
 
 .ember-theater {
   @extend .et-full-screen;
