add blank screen background color

--- a/addon/styles/variables/_ember-theater.scss
+++ b/addon/styles/variables/_ember-theater.scss
@@ -1,3 +1,4 @@
+$et-blank-screen-background-color: #333 !default;
 $et-primary-color: #009393 !default;
 $et-secondary-color: #00585F !default;
 $et-highlight-color: #FF3800 !default;
