--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,1 +1,10 @@
-{{ember-theater/menu-bar/save-menu}}
+<div class='et-menu-bar'>
+  {{ember-theater/menu-bar/control
+    iconName='save'
+    open=(action 'openSaveMenu')
+    toggle=(action 'toggleSaveMenu')}}
+  {{#if saveMenuOpen}}
+    {{ember-theater/menu-bar/save-menu
+      toScene=(action 'toScene')}}
+  {{/if}}
+</div>
