--- a/addon/styles/variables/components/_dialogue.scss
+++ b/addon/styles/variables/components/_dialogue.scss
@@ -9,6 +9,7 @@ $et-dialogue-padding-bottom: $et-dialogue-padding * 0.75 !default;
 $et-dialogue-opacity: $et-semi-transparency !default;
 $et-dialogue-font-size: $et-default-font-size !default;
 $et-dialogue-line-height: $et-default-line-height !default;
+$et-dialogue-text-align: left !default;
 
 $et-dialogue-caption-padding: $et-dialogue-padding / 4 $et-dialogue-padding / 2 !default;
 $et-dialogue-caption-font-size: $et-large-font-size !default;
