--- a/addon/styles/_mixins.scss
+++ b/addon/styles/_mixins.scss
@@ -1,4 +1,6 @@
 @import "mixins/button";
 @import "mixins/full-screen";
 @import "mixins/hidden";
+@import "mixins/input";
 @import "mixins/panel";
+@import "mixins/sr-only";
