--- a/addon/styles/variables/_ember-theater.scss
+++ b/addon/styles/variables/_ember-theater.scss
@@ -1,8 +1,9 @@
-$et-blank-screen-background-color: #333 !default;
 $et-primary-color: #009393 !default;
 $et-secondary-color: #00585F !default;
 $et-highlight-color: #FF3800 !default;
 $et-neutral-color: #FFFCC4 !default;
+
+$et-blank-screen-background-color: $et-secondary-color !default;
 
 $et-default-border-radius: 0.5vw !default;
 $et-default-border-width: 0.5vh !default;
@@ -20,4 +21,5 @@ $et-default-transition-speed: 500ms;
 @import "components/menu-bar";
 
 @import "mixins/button";
+@import "mixins/input";
 @import "mixins/panel";
