--- a/addon/styles/variables/components/_choice.scss
+++ b/addon/styles/variables/components/_choice.scss
@@ -4,7 +4,7 @@ $et-choice-rhythm: 0.1vw !default;
 $et-choice-top: 20% !default;
 $et-choice-right: (100 - $et-choice-width) / 2 !default;
 $et-choice-left: (100 - $et-choice-width) / 2 !default;
-$et-choice-padding: $et-choice-rhythm !default;
+$et-choice-padding: $et-choice-rhythm * 5 !default;
 $et-choice-background-color: $et-secondary-color !default;
 $et-choice-opacity: $et-semi-transparency !default;
 
