switch it ember-i18n

--- a/addon/components/ember-theater/menu-bar/template.hbs
+++ b/addon/components/ember-theater/menu-bar/template.hbs
@@ -1,8 +1,11 @@
 <div class='et-menu-bar'>
   {{ember-theater/menu-bar/control
     iconName='save'
-    open=(action 'openSaveMenu')
-    toggle=(action 'toggleSaveMenu')}}
+    focusControl=(action 'openSaveMenu')
+    clickControl=(action 'toggleControlProperty' 'saveMenuOpen')}}
+  {{ember-theater/menu-bar/control
+    iconName='refresh'
+    clickControl=(action 'toInitialScene')}}
   {{#if saveMenuOpen}}
     {{ember-theater/menu-bar/save-menu
       toScene=(action 'toScene')}}
