--- a/addon/styles/variables/components/_menu-bar.scss
+++ b/addon/styles/variables/components/_menu-bar.scss
@@ -6,11 +6,12 @@ $et-menu-bar-left: 0 !default;
 $et-menu-bar-right: 0 !default;
 $et-menu-bar-height: 10.5vh !default;
 $et-menu-bar-padding: $et-menu-bar-vertical-rhythm 4vh !default;
-$et-menu-bar-opacity: 0.9 !default;
+$et-menu-bar-opacity: 0.95 !default;
 $et-menu-bar-transition-speed: $et-default-transition-speed !default;
 
 $et-menu-bar-dropdown-top-margin: $et-menu-bar-vertical-rhythm !default;
 $et-menu-bar-dropdown-right: 0 !default;
 $et-menu-bar-dropdown-padding: $et-menu-bar-vertical-rhythm * 2 4vh !default;
+$et-menu-bar-dropdown-background-color: $et-secondary-color !default;
 
 $et-menu-bar-save-menu-button-padding: 0 2vh !default;
