--- a/addon/components/letter-by-letter/template.hbs
+++ b/addon/components/letter-by-letter/template.hbs
@@ -1,10 +1,9 @@
-<div class='letter-by-letter'>
-  {{#each visibleWords key='@index' as |word index|}}
-    {{letter-by-letter/word 
-      currentWord=currentWord
-      incrementCurrentWord=(action 'incrementCurrentWord')
-      index=index
-      speed=speed
-      word=word}}
-  {{/each}}
-</div>
+{{#each words key='@index' as |word index|}}
+  {{letter-by-letter/word 
+    activeWordIndex=activeWordIndex
+    index=index
+    speed=speed
+    word=word
+    wordByWord=wordByWord
+    incrementActiveWordIndex=(action 'incrementActiveWordIndex')}}
+{{/each}}
