--- a/addon/components/letter-by-letter/word/template.hbs
+++ b/addon/components/letter-by-letter/word/template.hbs
@@ -1,9 +1,13 @@
-{{#each word key='@index' as |character index|}}
-  {{letter-by-letter/word/character
-    currentCharacter=currentCharacter
-    incrementCurrentCharacter=(action 'incrementCurrentCharacter')
-    index=index
-    character=character
-    speed=speed}}
-{{/each}}
+{{#if activeCharacterByCharacter}}
+  {{#each word key='@index' as |character index|}}
+    {{letter-by-letter/word/character
+      activeCharacterIndex=activeCharacterIndex
+      index=index
+      character=character
+      speed=speed
+      incrementActiveCharacterIndex=(action 'incrementActiveCharacterIndex')}}
+  {{/each}}
+{{else}}
+  <span>{{word}}</span>
+{{/if}}
 <span class='letter-by-letter__character'>&nbsp;</span>
