--- a/addon/styles/components/_letter_by_letter.scss
+++ b/addon/styles/components/_letter_by_letter.scss
@@ -1,20 +1,20 @@
-.letter-by-letter-container {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
+.letter-by-letter {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
 
-  .letter-by-letter {
-    position: relative;
-    font-size: 0;
+  .letter-by-letter__word {
+    display: flex;
+    opacity: 0;
 
-    .letter-by-letter__word {
-      white-space: nowrap;
+    &.letter-by-letter__visible {
+      opacity: 1;
+    }
 
-      .letter-by-letter__character {
-        display: inline-block;
-        padding: 0;
-        opacity: 0;
-      }
+    .letter-by-letter__character {
+      display: inline-block;
+      padding: 0;
+      opacity: 0;
     }
   }
 }
