directables to directions

--- a/addon/components/ember-theater/director/template.hbs
+++ b/addon/components/ember-theater/director/template.hbs
@@ -1,4 +1,4 @@
 {{ember-theater/layer
-directables=theaterLayer.directables
+directions=theaterLayer.directions
 layers=theaterLayer.layers
 name=theaterLayer.name}}
