--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,1 +1,3 @@
-{{ember-theater initialScene='1'}}
+{{ember-theater
+  initialEmberTheaterComponents=initialEmberTheaterComponents
+  initialEmberTheaterData=initialEmberTheaterData}}
