--- a/addon/components/ember-theater/director/character/template.hbs
+++ b/addon/components/ember-theater/director/character/template.hbs
@@ -1,5 +1,6 @@
 {{#each expressionContainers as |expressionContainer|}}
   {{ember-theater/director/character/expression
     expression=expressionContainer.expression
+    fastboot=fastboot
     line=expressionContainer.line}}
 {{/each}}
