--- a/addon/components/ember-theater/director/template.hbs
+++ b/addon/components/ember-theater/director/template.hbs
@@ -1,4 +1,3 @@
 {{ember-theater/layer
-directions=theaterLayer.directions
-layers=theaterLayer.layers
-name=theaterLayer.name}}
+directions=directions
+name=''}}
