replace fastboot with autoresolve

--- a/addon/components/ember-theater/director/character/template.hbs
+++ b/addon/components/ember-theater/director/character/template.hbs
@@ -2,7 +2,7 @@
   <div class='et-character-expression-container'>
     {{ember-theater/director/character/expression
       expression=expressionContainer.expression
-      fastboot=fastboot
+      autoResolve=autoResolve
       line=expressionContainer.line
     }}
   </div>
